--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -25,13 +25,13 @@ jobs:
           --label "org.opencontainers.image.source=${IMAGE_SOURCE}" \
           --label "org.opencontainers.image.revision=$(git rev-parse HEAD)" \
           --label "org.opencontainers.image.version=$(git describe --tags --abbrev=0)" \
-          -f ./server-distroless.dockerfile -t "${IMAGE_NAME}:server-distroless"
+          -f ./server.dockerfile -t "${IMAGE_NAME}:server"
 
           docker build . \
           --label "org.opencontainers.image.source=${IMAGE_SOURCE}" \
           --label "org.opencontainers.image.revision=$(git rev-parse HEAD)" \
           --label "org.opencontainers.image.version=$(git describe --tags --abbrev=0)" \
-          -f ./bundler-distroless.dockerfile -t "${IMAGE_NAME}:bundler-distroless"
+          -f ./bundler.dockerfile -t "${IMAGE_NAME}:bundler"
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -50,7 +50,7 @@ jobs:
           [ "$VERSION" == "master" ] && VERSION=latest
           echo IMAGE_NAME=$IMAGE_NAME
           echo VERSION=$VERSION
-          docker tag ${IMAGE_NAME}:server-distroless $IMAGE_NAME:$VERSION-server-distroless
-          docker tag ${IMAGE_NAME}:bundler-distroless $IMAGE_NAME:$VERSION-bundler-distroless
-          docker push $IMAGE_NAME:$VERSION-server-distroless
-          docker push $IMAGE_NAME:$VERSION-bundler-distroless
+          docker tag ${IMAGE_NAME}:server $IMAGE_NAME:$VERSION-server
+          docker tag ${IMAGE_NAME}:bundler $IMAGE_NAME:$VERSION-bundler
+          docker push $IMAGE_NAME:$VERSION-server
+          docker push $IMAGE_NAME:$VERSION-bundler
